--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="green_100">#EEFEEF</color>
 
     <color name="gray_100">#E3E3E3</color>
+    <color name="gray_150">#CACACA</color>
     <color name="gray_200">#AAAAAA</color>
     <color name="gray_300">#858585</color>
     <color name="gray_700">#292929</color>
