--- a/app/src/main/res/layout/fragment_folder.xml
+++ b/app/src/main/res/layout/fragment_folder.xml
@@ -42,7 +42,7 @@
                 android:layout_marginRight="20dp"
                 android:layout_toLeftOf="@id/new_folder"
                 android:background="@android:color/transparent"
-                android:src="@drawable/ic_cart_black"
+                android:src="@drawable/ic_cart"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/new_folder"
                 app:layout_constraintTop_toTopOf="parent" />
