--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Spacing -->
+    <dimen name="spacing4">4dp</dimen>
+    <dimen name="spacing10">10dp</dimen>
     <dimen name="spacing12">12dp</dimen>
+    <dimen name="spacing14">14dp</dimen>
+    <dimen name="spacingBase">16dp</dimen>
 
     <!-- Widget -->
     <dimen name="widgetHeightBase">48dp</dimen>
+
+    <!-- Typography -->
+    <dimen name="typographyBaseDetail">12sp</dimen>
+    <dimen name="typographyDescription">14sp</dimen>
+    <dimen name="typographyBase">16sp</dimen>
 </resources>
