--- a/app/src/main/res/drawable/ic_back.xml
+++ b/app/src/main/res/drawable/ic_back.xml
@@ -1,16 +1,16 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="18.634dp"
-    android:height="18.922dp"
-    android:viewportWidth="18.634"
-    android:viewportHeight="18.922">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M17.833,9.486L1.386,9.486"
+      android:pathData="M20.2,12H4.46"
       android:strokeWidth="1.6"
       android:fillColor="#00000000"
       android:strokeColor="#292929"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M9.13,17.79 L0.8,9.461 9.13,1.131"
+      android:pathData="M10.0501,18.2001L3.8501,12L10.0501,5.8"
       android:strokeLineJoin="round"
       android:strokeWidth="1.6"
       android:fillColor="#00000000"
