--- a/app/src/main/res/layout/fragment_folder_detail.xml
+++ b/app/src/main/res/layout/fragment_folder_detail.xml
@@ -19,51 +19,35 @@
         android:background="@color/white">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/title_container"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
                 android:id="@+id/back"
+                style="@style/Widget.Button.Icon.Navigation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@android:color/transparent"
                 android:onClick="@{(v) -> Navigation.findNavController(v).popBackStack()}"
-                android:padding="@dimen/spacing12"
                 android:src="@drawable/ic_back"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageButton
-                android:id="@+id/more"
+            <TextView
+                android:id="@+id/folder_name"
+                style="@style/Widget.Tab.Detail.TextAppearance.Title"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_marginEnd="8dp"
-                android:background="@android:color/transparent"
-                android:padding="@dimen/spacing12"
-                android:src="@drawable/ic_more"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.folderItem.name}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="폴더명" />
 
-        <TextView
-            android:id="@+id/folder_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/nanum_square_eb"
-            android:paddingHorizontal="20dp"
-            android:paddingBottom="10dp"
-            android:text="@{viewModel.folderItem.name}"
-            android:textColor="@color/gray_700"
-            android:textSize="15dp"
-            app:layout_constraintTop_toBottomOf="@id/title_container"
-            tools:text="폴더명" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/wish_list"
@@ -74,7 +58,7 @@
             android:scrollbarThumbVertical="@android:color/darker_gray"
             android:scrollbars="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/folder_name" />
+            app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
