--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -13,64 +13,73 @@
             type="com.hyeeyoung.wishboard.viewmodel.CartViewModel" />
     </data>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:orientation="vertical">
+        android:background="@color/white">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp">
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
                 android:id="@+id/back"
+                style="@style/Widget.Button.Icon.Navigation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:background="@android:color/transparent"
                 android:onClick="@{(v) -> Navigation.findNavController(v).popBackStack()}"
-                android:padding="12dp"
                 android:src="@drawable/ic_back"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                style="@style/Widget.Tab.Detail.TextAppearance.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:fontFamily="@font/nanum_square_eb"
                 android:text="@string/cart_title"
-                android:textColor="@color/gray_700"
-                android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/gray_100"
+            app:layout_constraintTop_toTopOf="@id/cart_list" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/cart_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+            app:dividerColor="@{@color/gray_100}"
+            app:dividerHeight="@{2f}"
+            app:dividerPadding="@{0f}"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toTopOf="@id/cart_total_container"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            tools:listitem="@layout/item_cart" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cart_total_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/green_500"
-            android:padding="20dp">
+            android:padding="@dimen/spacingBase"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <TextView
                 android:id="@+id/total_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/nanum_square_eb"
-                android:text="총"
+                android:fontFamily="@font/suit_r"
+                android:text="@string/all"
                 android:textColor="@color/gray_700"
-                android:textSize="17dp"
+                android:textSize="@dimen/typographyBase"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -78,11 +87,12 @@
                 android:id="@+id/total_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:fontFamily="@font/nanum_square_eb"
+                android:layout_marginStart="3dp"
+                android:fontFamily="@font/montserrat_b"
                 android:text="@{Integer.toString(viewModel.cartList.size())}"
                 android:textColor="@color/gray_700"
-                android:textSize="17dp"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/total_text"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="0" />
@@ -90,12 +100,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
-                android:layout_toRightOf="@id/total_count"
-                android:fontFamily="@font/nanum_square_eb"
-                android:text="개"
+                android:fontFamily="@font/suit_r"
+                android:text="@string/count"
                 android:textColor="@color/gray_700"
-                android:textSize="17dp"
+                android:textSize="@dimen/typographyBase"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/total_count"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -103,11 +112,10 @@
                 android:id="@+id/total_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="2dp"
-                android:layout_toLeftOf="@id/won"
-                android:fontFamily="@font/nanum_square_eb"
+                android:fontFamily="@font/montserrat_b"
                 android:textColor="@color/gray_700"
-                android:textSize="17dp"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/won"
                 app:layout_constraintTop_toTopOf="parent"
                 app:priceFormat="@{viewModel.totalPrice}"
@@ -117,13 +125,13 @@
                 android:id="@+id/won"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:fontFamily="@font/nanum_square_b"
-                android:text="원"
+                android:fontFamily="@font/suit_r"
+                android:text="@string/won"
                 android:textColor="@color/gray_700"
-                android:textSize="17dp"
+                android:textSize="@dimen/typographyBase"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
