--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <!-- Spacing -->
     <dimen name="spacingMicro">4dp</dimen>
+    <dimen name="spacing5">5dp</dimen>
     <dimen name="spacingSmall">8dp</dimen>
     <dimen name="spacing10">10dp</dimen>
     <dimen name="spacing12">12dp</dimen>
