--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,11 +12,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
-            android:fontFamily="@font/noto_sans_kr_bold"
-            android:text="Wish Board"
+            android:fontFamily="@font/montserrat_eb"
+            android:text="@string/logo_text"
             android:textColor="@color/gray_700"
-            android:textSize="35dp"
+            android:textSize="58sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
