[mod] 디테일 화면 ui 수정

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,5 +19,8 @@
 
     <!-- Radius -->
     <dimen name="radiusSmall">10dp</dimen>
+    <dimen name="radiusLarge">32dp</dimen>
+    <dimen name="spacing20">20dp</dimen>
+
 
 </resources>
