--- a/app/src/main/res/drawable/ic_trash.xml
+++ b/app/src/main/res/drawable/ic_trash.xml
@@ -1,34 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="18.097dp"
-    android:height="19.93dp"
-    android:viewportWidth="18.097"
-    android:viewportHeight="19.93">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M0.8,4.466L17.3,4.466"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.6"
-      android:fillColor="#00000000"
-      android:strokeColor="#292929"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M15.464,4.466L15.464,17.3A1.833,1.833 0,0 1,13.633 19.13L4.466,19.13A1.833,1.833 0,0 1,2.633 17.3L2.633,4.466m2.749,0L5.382,2.633A1.833,1.833 0,0 1,7.215 0.8h3.666a1.833,1.833 0,0 1,1.833 1.833L12.714,4.466"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.6"
-      android:fillColor="#00000000"
-      android:strokeColor="#292929"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M7.56,9.472L7.56,14.301"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.6"
-      android:fillColor="#00000000"
-      android:strokeColor="#292929"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M10.457,9.472L10.457,14.301"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.6"
-      android:fillColor="#00000000"
-      android:strokeColor="#292929"
-      android:strokeLineCap="round"/>
+      android:pathData="M15.0769,4.5H18.7692C19.5077,4.5 20,5 20,5.75V7H4V5.75C4,5 4.6154,4.5 5.2308,4.5H8.9231C9.1692,3.125 10.5231,2 12,2C13.4769,2 14.8308,3.125 15.0769,4.5ZM10.1538,4.5H13.8462C13.6,3.75 12.7385,3.25 12,3.25C11.2615,3.25 10.4,3.75 10.1538,4.5ZM5.2308,8.25H18.7692L17.6615,20.875C17.6615,21.5 17.0462,22 16.4308,22H7.5692C6.9538,22 6.4615,21.5 6.3385,20.875L5.2308,8.25Z"
+      android:fillColor="#292929"/>
 </vector>
