[mod] 아이템 기본 업로드 ui 수정

--- a/app/src/main/res/drawable/ic_camera.xml
+++ b/app/src/main/res/drawable/ic_camera.xml
@@ -1,9 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="23.695dp"
-    android:height="18.001dp"
-    android:viewportWidth="23.695"
-    android:viewportHeight="18.001">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M21.541,18h-19.387a2.115,2.115 0,0 1,-2.154 -2.014v-11.368a2.042,2.042 0,0 1,2.154 -2.014h4.307v-1.3a1.284,1.284 0,0 1,1.293 -1.3h8.078a1.31,1.31 0,0 1,1.4 1.3v1.3h4.307a2.115,2.115 0,0 1,2.154 2.014v11.368A2.042,2.042 0,0 1,21.541 18ZM11.8481,4.854a5.454,5.454 0,0 0,-5.447 5.448,5.454 5.454,0 0,0 5.447,5.448 5.454,5.454 0,0 0,5.448 -5.448A5.454,5.454 0,0 0,11.8481 4.855ZM11.8481,14.33a4.032,4.032 0,0 1,-4.027 -4.027,4.032 4.032,0 0,1 4.027,-4.027 4.031,4.031 0,0 1,4.025 4.027A4.031,4.031 0,0 1,11.8481 14.33Z"
-      android:fillColor="#000"/>
+      android:pathData="M12.0001,13.25m-3.625,0a3.625,3.625 0,1 1,7.25 0a3.625,3.625 0,1 1,-7.25 0"
+      android:fillColor="#AAAAAA"/>
+  <path
+      android:pathData="M7,4.5C7,3.1193 8.1193,2 9.5,2H14.5C15.8807,2 17,3.1193 17,4.5H18.25C21.0114,4.5 23.25,6.7386 23.25,9.5V17C23.25,19.7614 21.0114,22 18.25,22H5.75C2.9886,22 0.75,19.7614 0.75,17V9.5C0.75,6.7386 2.9886,4.5 5.75,4.5H7ZM12,18.25C14.7614,18.25 17,16.0114 17,13.25C17,10.4886 14.7614,8.25 12,8.25C9.2386,8.25 7,10.4886 7,13.25C7,16.0114 9.2386,18.25 12,18.25ZM17.875,10C18.3582,10 18.75,9.6082 18.75,9.125C18.75,8.6418 18.3582,8.25 17.875,8.25C17.3918,8.25 17,8.6418 17,9.125C17,9.6082 17.3918,10 17.875,10Z"
+      android:fillColor="#AAAAAA"
+      android:fillType="evenOdd"/>
 </vector>
