--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="green_500">#73F87C</color>
     <color name="green_100">#EEFEEF</color>
 
+    <color name="gray_50">#EBEBEB</color>
     <color name="gray_100">#E3E3E3</color>
     <color name="gray_150">#CACACA</color>
     <color name="gray_200">#AAAAAA</color>
