--- a/app/src/main/res/drawable/ic_check.xml
+++ b/app/src/main/res/drawable/ic_check.xml
@@ -1,16 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="23dp"
-    android:height="23dp"
-    android:viewportWidth="23"
-    android:viewportHeight="23">
+    android:width="14dp"
+    android:height="12dp"
+    android:viewportWidth="14"
+    android:viewportHeight="12">
   <path
-      android:pathData="M11.5,11.5m-11.5,0a11.5,11.5 0,1 1,23 0a11.5,11.5 0,1 1,-23 0"
-      android:fillColor="#7cf885"/>
-  <group>
-    <clip-path
-        android:pathData="M7,7h9.907v9.061h-9.907z"/>
-    <path
-        android:pathData="M10.908,16.061a0.453,0.453 0,0 1,-0.32 -0.133L7.132,12.473a0.452,0.452 0,1 1,0.637 -0.64L10.89,14.947 16.112,9.075a0.454,0.454 0,0 1,0.68 0.6L11.246,15.91a0.553,0.553 0,0 1,-0.338 0.151"
-        android:fillColor="#292929"/>
-  </group>
+      android:pathData="M13.2355,1.769C13.522,1.3628 13.4249,0.8013 13.0187,0.5148C12.6125,0.2283 12.051,0.3254 11.7645,0.7316L5.7298,9.2883L2.1824,5.1634C1.8583,4.7866 1.2901,4.7438 0.9132,5.0679C0.5363,5.392 0.4936,5.9602 0.8177,6.3371L5.1177,11.3371C5.2985,11.5474 5.5662,11.6625 5.8432,11.6492C6.1203,11.6359 6.3757,11.4956 6.5355,11.269L13.2355,1.769Z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="0.2"
+      android:fillColor="#73F87C"
+      android:strokeColor="#73F87C"
+      android:strokeLineCap="round"/>
 </vector>
