[mod] 상품 알림 설정 ui 수정

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@
     <dimen name="typographyBase">16sp</dimen>
 
     <!-- Radius -->
+    <dimen name="radiusMicro">5dp</dimen>
     <dimen name="radiusSmall">10dp</dimen>
     <dimen name="radiusLarge">32dp</dimen>
     <dimen name="spacing20">20dp</dimen>
